# geometric_controller_ros2

./: LICENSE
controller_msgs/: CMakeLists.txt  package.xml
controller_msgs/msg/: AttitudeTarget.msg  PositionTarget.msg  State.msg
controller_msgs/srv/: SetMode.srv
geometric_controller/: CMakeLists.txt  package.xml
geometric_controller/include/geometric_controller/: common.h  geometric_controller.h
geometric_controller/launch/: sitl_trajectory_track_circle.launch.py  sitl_trajectory_track_lemniscate.launch.py  sitl_unity_controller.launch.py
geometric_controller/src/: geometric_controller.cpp  geometric_controller_node.cpp
trajectory_publisher/: CMakeLists.txt  package.xml
trajectory_publisher/include/trajectory_publisher/: polynomialtrajectory.h  shapetrajectory.h  trajectory.h  trajectoryPublisher.h
trajectory_publisher/launch/: circle_trajectory.launch.py  mav_trajectory_setpointraw.launch.py
trajectory_publisher/src/: polynomialtrajectory.cpp  shapetrajectory.cpp  trajectory.cpp  trajectoryPublisher.cpp  trajectoryPublisher_node.cpp
