<?xml version="1.0"?>
<package format="3">
  <name>geometric_controller</name>
  <version>0.0.0</version>
  <description>Polynomial Trajectory Tracking controller using a geometric controller</description>

  <maintainer email="chanjoon.park@kaist.ac.kr">Chanjoon Park</maintainer>
  <maintainer email="jalim@student.ethz.ch">Jaeyoung Lim</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>px4_msgs</build_depend>
  <build_depend>px4_ros_com</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>controller_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>px4_ros_com</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
